--- a/styles.css
+++ b/styles.css
@@ -3,5 +3,44 @@
     padding: 0;
     margin: 0;
     max-width: 100%;
-    border: 1px solid black;
+}
+
+body {
+    background-color: ivory;
+    font-size: 2rem;
+}
+
+.row {
+    margin: 30%;
+    margin-top: 15px;
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    border: 5px solid black;
+    padding: 10px;
+}
+
+}
+
+.mb1 {
+    margin-bottom: 10px;
+}
+
+input {
+    border-radius: 5px;
+    width: 342px;
+    height: 30px;
+    margin: 2px;
+}
+
+.card {
+background-color: ivory;
+color:crimson;
+border: 5px solid crimson;
+    padding: 10px;
+    margin: 25%;
+    margin-top: 25px;
+    margin-bottom: 25px;
 }
